Clean overlap changes
