# src/main/java/io/tackle/pathfinder/controllers/QuestionnairesResource.java
@@ -1,44 +1,0 @@
-package io.tackle.pathfinder.controllers;
-
-import io.tackle.pathfinder.dto.AssessmentHeaderDto;
-import io.tackle.pathfinder.dto.questionnaire.QuestionnaireDto;
-import io.tackle.pathfinder.dto.questionnaire.QuestionnaireHeaderDto;
-import io.tackle.pathfinder.services.AssessmentSvc;
-import io.tackle.pathfinder.services.QuestionnaireSvc;
-import io.tackle.pathfinder.services.TranslatorSvc;
-import org.eclipse.microprofile.jwt.JsonWebToken;
-
-import javax.inject.Inject;
-import javax.validation.constraints.NotNull;
-import javax.ws.rs.*;
-import java.util.List;
-import java.util.stream.Collectors;
-
-@Path("/questionnaires")
-public class QuestionnairesResource {
-    @Inject
-    QuestionnaireSvc questionnaireSvc;
-
-    @Inject
-    TranslatorSvc translatorSvc;
-
-    @Inject
-    JsonWebToken accessToken;
-
-    @GET
-    @Produces("application/json")
-    public List<QuestionnaireHeaderDto> getQuestionnaires(@QueryParam("language") String language) {
-        String lang = translatorSvc.getLanguage(accessToken.getRawToken(), language);
-        return questionnaireSvc.getQuestionnaireHeaderList(lang);
-    }
-
-    @GET
-    @Path("/{questionnaireId}")
-    @Produces("application/json")
-    public QuestionnaireDto getQuestionnaire(@PathParam ("questionnaireId") Long questionnaireId, @QueryParam("language") String language) {
-        String lang = translatorSvc.getLanguage(accessToken.getRawToken(), language);
-        return questionnaireSvc.getQuestionnaire(questionnaireId, lang);
-    }
-
-
-}
