# src/main/java/io/tackle/pathfinder/dto/questionnaire/QuestionnaireHeaderDto.java
@@ -1,40 +1,0 @@
-package io.tackle.pathfinder.dto.questionnaire;
-
-import com.fasterxml.jackson.annotation.JsonInclude;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonPropertyDescription;
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-import io.quarkus.runtime.annotations.RegisterForReflection;
-import io.tackle.pathfinder.dto.AssessmentStatus;
-import io.tackle.pathfinder.dto.BasicDto;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-import lombok.experimental.SuperBuilder;
-
-
-/**
- * 
- */
-@JsonInclude(JsonInclude.Include.NON_NULL)
-@JsonPropertyOrder({
-    "id",
-    "name",
-    "language"
-})
-@Data
-@SuperBuilder
-@AllArgsConstructor
-@NoArgsConstructor
-@RegisterForReflection
-public class QuestionnaireHeaderDto extends BasicDto {
-    @JsonProperty("name")
-    @JsonPropertyDescription("")
-    private String name;
-
-
-    @JsonProperty("language")
-    @JsonPropertyDescription("")
-    private String language;
-}
